--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 500px;
+  margin: 0 auto;
 }
 
 .App-logo {
@@ -22,6 +24,12 @@
   color: #61dafb;
 }
 
+ul,li{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-align: left;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
